hphp/hack/test/sound_dynamic/typing/interfaces_5.bad.php
<?hh

<<__SupportDynamicType>>
interface I {}

<<__SupportDynamicType>>
trait T implements I {}

class C {
  use T;
}
